Update documentation for Convosphere AI: renamed project, revised color scheme, and restructured navigation. Enhanced API reference with detailed endpoints and authentication methods. Updated index with new features and quick links for user guidance.

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,105 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Welcome to Convosphere AI"
+description: "Build, train, and deploy intelligent AI chatbots"
 ---
 
-## Setting up
+## What is Convosphere AI?
 
-Get your documentation site up and running in minutes.
+Convosphere AI is a powerful platform for creating intelligent chatbots that understand your business and help your customers 24/7. Build agents, train them with your content, and deploy them anywhere.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
+<Card title="Get Started" icon="rocket" href="/getting-started" horizontal>
+  Create your first AI agent in minutes
 </Card>
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
+## Quick Links
 
 <Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+  <Card title="Getting Started" icon="book-open" href="/getting-started">
+    Learn how to create your first agent
+  </Card>
+  <Card title="Agent Guide" icon="robot" href="/guides/agents">
+    Create and manage AI agents
+  </Card>
+  <Card title="Knowledge Base" icon="database" href="/guides/knowledge-base">
+    Train agents with your content
+  </Card>
+  <Card title="Widget Embed" icon="code" href="/guides/widget-embed">
+    Embed chat widgets on your website
+  </Card>
+  <Card title="Integrations" icon="plug" href="/integrations/overview">
+    Connect with Notion, Slack, and more
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
+    title="API Reference"
     icon="terminal"
     href="/api-reference/introduction"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Complete API documentation
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Key Features
 
-Everything you need to create world-class documentation.
+### 🤖 AI Agents
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+Create intelligent chatbots with customizable personalities and behaviors.
 
-## Need inspiration?
+- Multiple AI models (GPT-4, Claude, etc.)
+- Custom system prompts
+- Training modes (RAG, fine-tuning, hybrid)
+
+### 📚 Knowledge Base
+
+Train your agents with your own content.
+
+- Document upload (PDF, Word, Text)
+- URL scraping (single pages or entire sites)
+- Notion integration (sync pages and databases)
+
+### 💬 Chat Interface
+
+Beautiful, customizable chat widgets.
+
+- Multiple widget types (bubble, inline, full-page)
+- Custom branding and themes
+- Mobile responsive
+
+### 🔌 Integrations
+
+Connect with popular services.
+
+- **CRM**: HubSpot, Salesforce
+- **Communication**: Slack, Email
+- **E-commerce**: Shopify
+- **Automation**: Zapier, n8n
+
+## Popular Guides
+
+<CardGroup cols={2}>
+  <Card title="Create Your First Agent" icon="rocket" href="/getting-started">
+    Step-by-step guide to building your first chatbot
+  </Card>
+  <Card
+    title="Add Knowledge Base"
+    icon="database"
+    href="/guides/knowledge-base"
+  >
+    Train your agent with documents and URLs
+  </Card>
+  <Card title="Embed Widget" icon="code" href="/guides/widget-embed">
+    Deploy your agent on your website
+  </Card>
+  <Card title="Connect Notion" icon="plug" href="/integrations/notion">
+    Sync your Notion workspace
+  </Card>
+</CardGroup>
+
+## Need Help?
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="Contact Support"
+  icon="envelope"
+  href="mailto:support@convosphere.ai"
 >
-  Browse our showcase of exceptional documentation sites.
+  Get help from our support team
 </Card>
