Update URLs and email addresses in documentation and assets to reflect the new domain. Adjusted favicon and logo SVG files for consistency with the updated branding.

--- a/api-reference/authentication/login.mdx
+++ b/api-reference/authentication/login.mdx
@@ -42,7 +42,7 @@ None (public endpoint)
 ## Example Request
 
 ```bash
-curl -X POST https://api.convosphere.ai/api/auth/login \
+curl -X POST https://api.convosphere.site/api/auth/login \
   -H "Content-Type: application/json" \
   -d '{
     "email": "user@example.com",
