--- a/api-reference/authentication/tokens.mdx
+++ b/api-reference/authentication/tokens.mdx
@@ -30,7 +30,7 @@ Refresh token required
 ## Example Request
 
 ```bash
-curl -X POST https://api.convosphere.ai/api/auth/refresh \
+curl -X POST https://api.convosphere.site/api/auth/refresh \
   -H "Content-Type: application/json" \
   -d '{
     "refreshToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
