--- a/getting-started.mdx
+++ b/getting-started.mdx
@@ -11,7 +11,7 @@ Convosphere AI is a powerful platform for creating intelligent chatbots that und
 
 ### Step 1: Create Your Account
 
-1. Visit [Convosphere AI](https://app.convosphere.ai)
+1. Visit [Convosphere AI](https://app.convosphere.site)
 2. Click **Sign Up** to create a new account
 3. You can sign up with:
    - Email and password
