--- a/index.mdx
+++ b/index.mdx
@@ -99,7 +99,7 @@ Connect with popular services.
 <Card
   title="Contact Support"
   icon="envelope"
-  href="mailto:support@convosphere.ai"
+  href="mailto:hello@convosphere.site"
 >
   Get help from our support team
 </Card>
