--- a/api-reference/authentication/signup.mdx
+++ b/api-reference/authentication/signup.mdx
@@ -50,7 +50,7 @@ None (public endpoint)
 ## Example Request
 
 ```bash
-curl -X POST https://api.convosphere.ai/api/auth/signup \
+curl -X POST https://api.convosphere.site/api/auth/signup \
   -H "Content-Type: application/json" \
   -d '{
     "name": "John Doe",
